--- a/Cloudmarket/Content/css/cadastro.css
+++ b/Cloudmarket/Content/css/cadastro.css
@@ -1,6 +1,5 @@
 ﻿body {
-    background: -webkit-linear-gradient(to right, rgb(5, 44, 80) 0%, rgb(32, 124, 229) 100%);
-    background: linear-gradient(to right, rgba(4, 53, 108, 1) 30%, rgba(0, 30, 50, 0.54) 100%), url(../../img/people-3281583_1920.jpg);
+    background: linear-gradient(to right, rgb(0, 149, 249) 43%, rgba(255, 255, 255, 0) 100%), url(../../img/people-3281583_1920.jpg);
     background-size: cover;
     background-position: right;
 }
@@ -17,7 +16,7 @@
 
 
 .formulario-cadastro {
-    background: linear-gradient(to right, rgb(4, 53, 108) 0, rgb(5, 50, 101) 100%);
+    background: linear-gradient(to right, rgb(0, 149, 249) 0, rgb(0, 149, 249) 100%);
     margin-top: 30px;
     height: 490px;
     width: 380px;
