--- a/Cloudmarket/Content/css/carrinho.css
+++ b/Cloudmarket/Content/css/carrinho.css
@@ -1,6 +1,6 @@
 ﻿body {
     background-color: white;
-    background: linear-gradient(to right, rgba(4, 53, 108, 1) -90%, rgba(0, 30, 50, 1) 100%);
+    background: linear-gradient(to right, rgb(0, 149, 249) -90%, rgb(99, 193, 255) 100%);
     background-size: cover;
     background-position: right;
     color: white;
