--- a/Cloudmarket/Views/Account/Login.cshtml
+++ b/Cloudmarket/Views/Account/Login.cshtml
@@ -50,6 +50,7 @@
 </div>
 
 @section Scripts {
+    @Scripts.Render("~/Scripts/tools/user.js")
     @Scripts.Render("~/Scripts/tools/removerPopover.js")
     @Scripts.Render("~/Scripts/tools/colocarPopover.js")
     @Scripts.Render("~/Scripts/login/login.js")
