--- a/Cloudmarket/Views/ProdutoCliente/Index.cshtml
+++ b/Cloudmarket/Views/ProdutoCliente/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="jumbotron">
     <div class="container">
-        <div class="col-md-6">
+        <div class="col-md-6 col-md-offset-4">
             <h2>Confira nossos produtos!</h2>
             <p class="lead">Aqui temos os melhores preços!</p>
         </div>
