--- a/Cloudmarket/Content/css/layout.css
+++ b/Cloudmarket/Content/css/layout.css
@@ -2,44 +2,55 @@
     font-family: 'Open Sans';
 }
 
+.navbar > .container .navbar-brand {
+    color: #262626;
+}
+
+    .navbar > .container .navbar-brand:hover {
+        color: rgb(0, 149, 249);
+    }
+
 .navbar-inverse {
-    background: linear-gradient(to right, rgb(0, 42, 89) 0, rgb(0, 30, 50) 100%);
+    background: linear-gradient(to right, rgb(255, 255, 255) 0, rgb(255, 255, 255) 100%);
     border: none;
-    box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.59);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.59);
     background-size: auto !important;
     background-size: 100% 6px !important;
     padding-bottom: 3px;
-    font-family: 'Montserrat';
+    font-family: 'Open Sans';
 }
 
-    .navbar-inverse ul {
-        font-weight: bold;
-    }
-
     .navbar-inverse .navbar-nav > .open > a, .dropdown-menu {
-        background-color: #1d1d1d!important;
+        background-color: rgb(0, 149, 249) !important;
         margin-top: -1px !important;
     }
 
-.dropdown-toggle {
-    cursor:pointer;
-}
+    .navbar-inverse .navbar-nav > li > a {
+        color: #262626;
+    }
+
+        .navbar-inverse .navbar-nav > li > a:hover {
+            color: rgb(0, 149, 249);
+        }
+
+        .navbar-inverse .navbar-nav > li > a:active {
+            color: rgb(0, 149, 249);
+        }
+
+        .dropdown-toggle {
+            cursor: pointer;
+        }
 
 .dropdown-menu > li > a {
-    color: #9d9d9d;
-    text-decoration: none;
-    font-family: 'Montserrat';
-    font-weight: bold;
-}
-
-.dropdown-menu {
-}
-
-.dropdown-menu > li > a:hover {
     color: white;
-    background-color: transparent;
     text-decoration: none;
 }
+
+    .dropdown-menu > li > a:hover {
+        color: rgb(168, 217, 251);
+        background-color: transparent;
+        text-decoration: none;
+    }
 
 footer {
     color: white;
