--- a/Cloudmarket/Content/css/produtos-cliente-index.css
+++ b/Cloudmarket/Content/css/produtos-cliente-index.css
@@ -1,20 +1,18 @@
 ﻿body {
-    background: linear-gradient(to right, rgba(4, 53, 108, 1) -90%, rgba(0, 30, 50, 1) 100%);
+    background: linear-gradient(to right, rgb(0, 149, 249) -90%, rgb(99, 193, 255) 100%);
 }
 
 .container .jumbotron {
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.25);
-    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.25);
-    background: linear-gradient(to right, rgba(4, 53, 108, 0.95) 0, rgba(0, 30, 50, 0.54) 100%), url(../../img/ecommerce-2607114_1280.jpg);
+    box-shadow: 0px 0px 12px -3px rgba(0,0,0,0.75);
+    background: linear-gradient(to right, rgba(255, 255, 255, 1) 30%, rgba(255, 255, 255, 1) 100%), url(../../img/ecommerce-2607114_1280.jpg);
     background-size: cover;
     background-position: right;
     border-radius: 0px;
 }
 
-    .jumbotron h2, .jumbotron p {
-        color: white;
-    }
+.jumbotron h2, .jumbotron p {
+    color: #262626;
+}
 
 .area-produtos {
     background-color: white;
@@ -32,8 +30,8 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 1em;
         margin-left: 20px;
-        border-left: 2px solid #245689;
-        border-bottom: 2px solid #245689;
+        border-left: 2px solid rgb(0, 149, 249);
+        border-bottom: 2px solid rgb(0, 149, 249);
         min-width: 940px;
     }
 
@@ -42,7 +40,7 @@
             grid-template-rows: 1fr 30% 20%;
             background-color: white;
             min-height: 337px;
-            border-bottom: 1px solid #245689;
+            border-bottom: 1px solid rgb(0, 149, 249);
             padding-bottom: 8px;
             margin-bottom: -1px;
         }
@@ -61,7 +59,7 @@
 }
 
     .body-nome > a:hover {
-        color: #245689;
+        color: rgb(0, 149, 249);
     }
 
 .body > .body-preco {
@@ -76,7 +74,7 @@
     padding-left: 10px;
     height: 2em;
     width: 12em;
-    border: 1px solid #085596;
+    border: 1px solid rgb(0, 149, 249);
 }
 
     #table-produto-cli_filter input::placeholder {
@@ -122,7 +120,7 @@
 
 #Categoria {
     padding: 4px 4px 4px 4px;
-    border: 1px solid #085596;
+    border: 1px solid rgb(0, 149, 249);
     cursor: pointer;
 }
 
@@ -142,18 +140,18 @@ select {
     padding: 4px 10px 4px 10px;
     font-size: 18px;
     background-color: #d4d4d4;
-    color: #254263;
+    color: rgb(0, 149, 249);
     border: none;
 }
 
     #table-produto-cli_previous:hover, .paginate_button:hover, #table-produto-cli_next:hover {
-        background-color: #2b4e75;
+        background-color: rgb(0, 149, 249);
         text-decoration: none;
         color: white;
     }
 
 .paginate_button {
-    color: #254263;
+    color: rgb(0, 149, 249);
     display: inline-block;
 }
 
@@ -163,8 +161,8 @@ select {
     }
 
 .current {
-    background-color: #2b4e75;
-    color:white;
+    background-color: rgb(0, 149, 249);
+    color: white;
 }
 
     .current:hover {
