--- a/Cloudmarket/Views/Account/Register.cshtml
+++ b/Cloudmarket/Views/Account/Register.cshtml
@@ -71,6 +71,7 @@
 }
 
 @section Scripts {
+    @Scripts.Render("~/Scripts/tools/user.js")
     @Scripts.Render("~/Scripts/register/register.js")
     @Scripts.Render("~/Scripts/tools/colocarPopover.js")
     @Scripts.Render("~/Scripts/tools/removerPopover.js")
