--- a/Cloudmarket/Views/Shared/_LoginPartial.cshtml
+++ b/Cloudmarket/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Microsoft.AspNet.Identity
-@using Cloudmarket.Service
-@{ 
-    UsuarioService usuarioService = new UsuarioService();
+@using Cloudmarket.Infra.Data.Repository;
+@{
+    UsuarioRepository repo = new UsuarioRepository();
 }
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -11,7 +12,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Olá " + usuarioService.FindNomeById(User.Identity.GetUserId()) + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("Olá " + repo.FindNomeById(User.Identity.GetUserId()) + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Fazer logoff</a></li>
         </ul>
