--- a/Cloudmarket/Views/Carrinho/Index.cshtml
+++ b/Cloudmarket/Views/Carrinho/Index.cshtml
@@ -6,6 +6,7 @@
 <h2>Carrinho</h2>
 
 <div id="tabela-carrinho-compra"></div>
+<div class="valor-total"></div>
 
 <button id="comprar" action="/Compra/Create">Comprar</button>
 
