--- a/Cloudmarket/Views/Compra/_EnderecoPartial.cshtml
+++ b/Cloudmarket/Views/Compra/_EnderecoPartial.cshtml
@@ -8,7 +8,7 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal form-endereco">
+<div class="container form-horizontal form-endereco">
     <h4>Endereco de Entrega</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
