--- a/Cloudmarket/Views/Compra/_PagamentoPartial.cshtml
+++ b/Cloudmarket/Views/Compra/_PagamentoPartial.cshtml
@@ -3,22 +3,24 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal form-pagamento">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Tipo, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @Html.Partial("_PagamentoPartialCartao")
-
-        <div class="form-group">
-            <input type="button" value="Finalizar Compra" class="btn btn-default btn-finalizar-compra" />
+<div class="form-horizontal form-pagamento">
+    <h4>Forma de Pagamento</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EnumDropDownListFor(model => model.Tipo, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    @Html.Partial("_PagamentoPartialCartao")
+
+    <div class="form-group">
+        <input type="button" value="Finalizar Compra" class="btn btn-default btn-finalizar-compra" />
+    </div>
+</div>
 }
 
 <script>
