--- a/Cloudmarket/Views/Compra/_PagamentoPartialCartao.cshtml
+++ b/Cloudmarket/Views/Compra/_PagamentoPartialCartao.cshtml
@@ -17,7 +17,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Numero, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control numeroCartao" } })
             @Html.ValidationMessageFor(model => model.Numero, "", new { @class = "text-danger" })
         </div>
     </div>
