--- a/Cloudmarket/Views/Manage/_ChangePasswordPartial.cshtml
+++ b/Cloudmarket/Views/Manage/_ChangePasswordPartial.cshtml
@@ -1,5 +1,11 @@
 ﻿@model Cloudmarket.Web.Models.IndexViewModel
 
+<style>
+    a {
+        color:white;
+    }
+</style>
+
 <div style="display:flex;">
     <label style="margin-right:8px">Senha:</label>
     <div>
