--- a/Cloudmarket/Views/Shared/_LoginPartial.cshtml
+++ b/Cloudmarket/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
 @using Cloudmarket.Infra.Data.Repository;
-@{
-    UsuarioRepository repo = new UsuarioRepository();
-}
 
 @if (Request.IsAuthenticated)
 {
@@ -12,7 +9,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Olá " + repo.FindNomeById(User.Identity.GetUserId()) + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("Ver Perfil", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Fazer logoff</a></li>
         </ul>
